--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1>  sumaiya tomare dekhle mone hoy hajar bochor tomar shate chilo porichy </h1> 
+         
                 <div class="pin-generator half-width">
                     <input id="display-pin" class="form-control" type="text">
+                    
+                           <h3 class ="mt-4">  sumaiya tomare dekhle mone hoy hajar bochor tomar shate chilo porichy </h3> 
                     <button onclick="generatePin()" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
